@@ -95,8 +95,9 @@
         <!-- ========== TESTING VERSIONS ========== -->
         <junit-jupiter.version>5.11.4</junit-jupiter.version>
         <testcontainers.version>1.20.4</testcontainers.version>
-        <instancio-junit.version>5.5.1</instancio-junit.version>
+        <instancio-junit.version>5.5.0</instancio-junit.version>
         <rest-assured.version>5.5.0</rest-assured.version>
+        <mockito.version>5.14.2</mockito.version>
 
         <!-- ========== THIRD-PARTY INTEGRATIONS VERSIONS ========== -->
         <stripe.version>28.3.0</stripe.version>
@@ -447,6 +448,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Maven Surefire Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
 
             <!-- SonarQube Scanner Plugin -->
